# wasm-world-sim

./: Cargo.toml  LICENSE_MIT  app.js  bun.lockb  index.html  package.json  style.css
src/: drawable.rs  lib.rs
src/math/: graph.rs  mod.rs  point.rs  segment.rs
