[package]
name = "wasm-cars-sim"
version = "0.1.0"
authors = ["Zuruuh <zuruh.dev@proton.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.66", features = ["Document", "Element", "HtmlElement", "Node", "Window", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
log = "0.4.20"
console_log = { version = "1.0.0", features = ["color"] }
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
